# Workout-Routine

./: .gitignore  Cargo.toml  README.md  index.html  manifest.json  script-js.js  script.js  style.css  sw.js  workout-data.js
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  build.sh
frontend/src/: api.rs  lib.rs  models.rs
frontend/src/components/: date_navigation.rs  exercise_card.rs  mod.rs  workout_tracker.rs
frontend/static/: index.html  style.css
src/: lib.rs
