[package]
name = "workout-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
gloo-net = { version = "0.6", features = ["http"] }
web-sys = "0.3"